// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-7od5yk-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-19pa6h0-Head {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-mrhmis-Row-Row {
  color: #4a4f62;
}

.cache-mrhmis-Row-Row a {
  color: inherit;
}

.cache-mrhmis-Row-Row tr:nth-of-type(even) {
  background-color: #ffffff;
}

.cache-mrhmis-Row-Row:hover {
  color: #390171;
}

.cache-mrhmis-Row-Row:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-mrhmis-Row-Row [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-mrhmis-Row-Row:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1jqkszb-HeadCell-cellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-1043yin-BodyCell-cellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
    class="efhaznt5 cache-7od5yk-StyledTable"
  >
    <thead
      class="efhaznt4 cache-19pa6h0-Head"
    >
      <tr
        class="efhaznt3 cache-mrhmis-Row-Row"
      >
        <th
          class="efhaznt2 cache-1jqkszb-HeadCell-cellStyle"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1jqkszb-HeadCell-cellStyle"
        >
          Status
        </th>
        <th
          class="efhaznt2 cache-1jqkszb-HeadCell-cellStyle"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-3svqc9"
    >
      <tr
        class="efhaznt3 cache-mrhmis-Row-Row"
      >
        <td
          class="efhaznt1 cache-1043yin-BodyCell-cellStyle"
        >
          165
        </td>
        <td
          class="efhaznt1 cache-1043yin-BodyCell-cellStyle"
        >
          Ongoing
        </td>
        <td
          class="efhaznt1 cache-1043yin-BodyCell-cellStyle"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="efhaznt3 cache-mrhmis-Row-Row"
      >
        <td
          class="efhaznt1 cache-1043yin-BodyCell-cellStyle"
        >
          56
        </td>
        <td
          class="efhaznt1 cache-1043yin-BodyCell-cellStyle"
        >
          Resolved
        </td>
        <td
          class="efhaznt1 cache-1043yin-BodyCell-cellStyle"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-7od5yk-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-19pa6h0-Head {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-mrhmis-Row-Row {
  color: #4a4f62;
}

.cache-mrhmis-Row-Row a {
  color: inherit;
}

.cache-mrhmis-Row-Row tr:nth-of-type(even) {
  background-color: #ffffff;
}

.cache-mrhmis-Row-Row:hover {
  color: #390171;
}

.cache-mrhmis-Row-Row:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-mrhmis-Row-Row [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-mrhmis-Row-Row:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1jqkszb-HeadCell-cellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-94ayq8-BodyCell-cellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-94ayq8-BodyCell-cellStyle.cache-94ayq8-BodyCell-cellStyle {
  height: 80px;
  position: relative;
}

.cache-cvdrej-StyledBox {
  position: absolute;
  top: 16px;
  left: 50%;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<table
    class="efhaznt5 cache-7od5yk-StyledTable"
  >
    <thead
      class="efhaznt4 cache-19pa6h0-Head"
    >
      <tr
        class="efhaznt3 cache-mrhmis-Row-Row"
      >
        <th
          class="efhaznt2 cache-1jqkszb-HeadCell-cellStyle"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1jqkszb-HeadCell-cellStyle"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-3svqc9"
    >
      <tr
        class="efhaznt3 cache-mrhmis-Row-Row"
      >
        <td
          class="efhaznt1 cache-94ayq8-BodyCell-cellStyle"
          colspan="2"
        >
          <div
            class="efhaznt0 cache-cvdrej-StyledBox"
          >
            <svg
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="20"
              aria-valuetext="20%"
              class="cache-gqzzce-Loader"
              role="progressbar"
              style="height: 40px; width: 40px;"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#d4dae7"
                stroke-width="16"
              />
              <circle
                class="cache-11f05l0-Loader"
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#4f0599"
                stroke-dasharray="263.89378290154264"
                stroke-dashoffset="211.11502632123413"
                stroke-linecap="round"
                stroke-width="16"
              />
            </svg>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
